--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <title>Document</title>
     <script defer src="style/index.js"></script>
     <link rel="stylesheet" href="./style/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Birthstone&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="hi">TODOLIST</div>
     <div class="cont">
         <div class="input">
-            <input type="task" class="input-form" name="task" required>
+            <input type="task" class="input-form" name="task" maxlength="20" required>
         </div>
         <div class="button">
                 <div class="addButton">Add</div>
